test/Fail/Issue2047a.err
Issue2047a.agda:15.10-14: error: [UnequalTerms]
The terms
  (λ { itis → true }) p
and
  (λ { itis → false }) p
are not equal at type Bool
when checking that the expression refl has type M.foo u ≡ M.bar u
